--- a/client/src/styles/tentSummary.css
+++ b/client/src/styles/tentSummary.css
@@ -77,7 +77,7 @@
 .tent-row.header-row {
     position: sticky;
     top: 0;
-    z-index: 1000; 
+    z-index:10; 
     background-color: #002b7f; /* Ensure the background color is solid */
     color: white;
     font-weight: bold;
